--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=2000
 
 # USER=jarp_cafe
 CONECCION=mongodb+srv://jarp_cafe:lDSmLDLhPeLk05ie@cloustercafe.igftb7j.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=my03public3key123
