SignIn de Google integrado

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PORT=2000
 # USER=jarp_cafe
 CONECCION=mongodb+srv://jarp_cafe:lDSmLDLhPeLk05ie@cloustercafe.igftb7j.mongodb.net/cafeDB
 SECRETORPRIVATEKEY=my03public3key123
+
+GOOGLE_CLIENT_ID=892841398299-hlq1r87bhj471ajhc3kgrtd3pr9sv8rv.apps.googleusercontent.com
+GOOGLE_SCRET_ID=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
